log
lu., 28 de abr. de 2025 17:13:13: 
 treemap.c | 35 +++++++++++++++++++++++------------
 1 file changed, 23 insertions(+), 12 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
ma., 29 de abr. de 2025 12:41:46: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++----
 1 file changed, 34 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:61:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:58:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
24981c0
ma., 29 de abr. de 2025 12:46:33: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
e109af7
vi.,  2 de may. de 2025 18:35:18: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(key, actual->pair->key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
In file included from test.c:4:0:
treemap.c:61:15: error: variable 'padre' set but not used [-Werror=unused-but-set-variable]
     TreeNode* padre = NULL;
               ^~~~~
cc1.exe: all warnings being treated as errors
a8ccbb1
vi.,  2 de may. de 2025 18:41:22: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(key, actual->pair->key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
d86cdd4
vi.,  2 de may. de 2025 18:42:52: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:12: error: too few arguments to function 'is_equal'
         if(is_equal(actual->pair->key, key))
            ^~~~~~~~
In file included from test.c:4:0:
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
74655f0
vi.,  2 de may. de 2025 18:43:58: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
6eadae1
vi.,  2 de may. de 2025 18:59:00: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
1b909b0
vi.,  2 de may. de 2025 20:04:49: 
 treemap.c | 52 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 52 insertions(+)
 tests:  17|4
total_score: 35/70
8a4e2eb
vi.,  2 de may. de 2025 20:14:02: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
dd8e33e
do.,  4 de may. de 2025 20:41:13: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
fb6631b
do.,  4 de may. de 2025 21:00:37: 
 treemap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:231:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(tree->current = NULL)return NULL;
     ^~
cc1.exe: all warnings being treated as errors
f5492c1
do.,  4 de may. de 2025 21:01:25: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
711768e
do.,  4 de may. de 2025 21:33:00: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:213:16: error: variable 'ubNode' set but not used [-Werror=unused-but-set-variable]
     TreeNode * ubNode = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
932c41f
do.,  4 de may. de 2025 21:33:46: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:213:16: error: variable 'ubNode' set but not used [-Werror=unused-but-set-variable]
     TreeNode * ubNode = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
deb0c51
do.,  4 de may. de 2025 21:38:09: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
bd4ac76
do.,  4 de may. de 2025 21:40:08: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:241:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
ce44868
